Try to make repositories work with generated code
